tests/baselines/reference/isolatedModulesWithDeclarationFile(strict=true).errors.txt
file1.ts(1,12): error TS7005: Variable 'x' implicitly has an 'any' type.


==== file1.d.ts (0 errors) ====
    declare function foo(): void;
    
==== file1.ts (1 errors) ====
    export var x;
               ~
!!! error TS7005: Variable 'x' implicitly has an 'any' type.